# malloy_mre

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
malloy_mre/: __main__.py
